Update apparel product cards with paired image swaps

--- a/index.html
+++ b/index.html
@@ -108,8 +108,17 @@
 
           <div class="product-grid" data-products>
             <article class="product" data-category="tees">
-              <div class="product-image">
-                <img src="assets/GGK Set Reveal Pub-20260206T134533Z-1-001/GGK Set Reveal Pub/Page 2.png" alt="Black GGK FLORA tee set" />
+              <div class="product-image product-image-pair">
+                <img
+                  class="primary-image"
+                  src="assets/GGK Set Reveal Pub-20260206T134533Z-1-001/GGK Set Reveal Pub/Page 2.png"
+                  alt="Stay Winnin tee front view"
+                />
+                <img
+                  class="secondary-image"
+                  src="assets/GGK Set Reveal Pub-20260206T134533Z-1-001/GGK Set Reveal Pub/Page 3.png"
+                  alt="Stay Winnin tee alternate view"
+                />
                 <span class="pill">FLORA</span>
                 <div class="product-badge">New</div>
               </div>
@@ -130,8 +139,17 @@
             </article>
 
             <article class="product" data-category="tees">
-              <div class="product-image">
-                <img src="assets/GGK Set Reveal Pub-20260206T134533Z-1-001/GGK Set Reveal Pub/Page 3.png" alt="White GGK FLORA tee set" />
+              <div class="product-image product-image-pair">
+                <img
+                  class="primary-image"
+                  src="assets/GGK Set Reveal Pub-20260206T134533Z-1-001/GGK Set Reveal Pub/Page 4.png"
+                  alt="Stay True tee front view"
+                />
+                <img
+                  class="secondary-image"
+                  src="assets/GGK Set Reveal Pub-20260206T134533Z-1-001/GGK Set Reveal Pub/Page 5.png"
+                  alt="Stay True tee alternate view"
+                />
                 <span class="pill">FLORA</span>
                 <div class="product-badge">Hot</div>
               </div>
@@ -152,8 +170,17 @@
             </article>
 
             <article class="product" data-category="tees">
-              <div class="product-image">
-                <img src="assets/GGK Set Reveal Pub-20260206T134533Z-1-001/GGK Set Reveal Pub/Page 4.png" alt="Blue and orange GGK FLORA set" />
+              <div class="product-image product-image-pair">
+                <img
+                  class="primary-image"
+                  src="assets/GGK Set Reveal Pub-20260206T134533Z-1-001/GGK Set Reveal Pub/Page 6.png"
+                  alt="Stay Lovely tee front view"
+                />
+                <img
+                  class="secondary-image"
+                  src="assets/GGK Set Reveal Pub-20260206T134533Z-1-001/GGK Set Reveal Pub/Page 7.png"
+                  alt="Stay Lovely tee alternate view"
+                />
                 <span class="pill">FLORA</span>
                 <div class="product-badge">Drop 01</div>
               </div>
