Refine checkout UX and remove lookbook image overlay

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="page">
       <header class="site-header">
         <div class="announcement">
-          <span>FLORA pre-orders open February 18, 2026</span>
+          <span>FLORA pre-orders open February 19, 2026</span>
         </div>
 
         <nav class="nav">
@@ -25,7 +25,7 @@
           <div class="nav-links">
             <a href="#new">New</a>
             <a href="#hype">Flora Drop</a>
-            <a href="#hype">Our Story</a>
+            <a href="#hype">Our Statement</a>
           </div>
 
           <div class="nav-actions">
@@ -45,10 +45,10 @@
               <div class="hero-content">
                 <p class="hero-eyebrow">GGK Presents</p>
                 <h1>FLORA Set Reveal</h1>
-                <p>Stay Winnin’. Stay True. Stay Lovely. Pre-orders open February 18, 2026.</p>
+                <p>Stay Winnin’. Stay True. Stay Lovely. Pre-orders open February 19, 2026.</p>
                 <div class="hero-actions">
-                  <button class="primary">Pre-Order FLORA</button>
-                  <button class="ghost">View Set Reveal</button>
+                  <a class="primary" href="#mens">Pre-Order FLORA</a>
+                  <a class="ghost" href="#mens">View Set Reveal</a>
                 </div>
               </div>
               <div class="hero-stamp">FLORA</div>
@@ -60,10 +60,6 @@
                 <p class="hero-eyebrow">Colorways</p>
                 <h1>Classic &amp; Bold Options</h1>
                 <p>Black or white tees with loud, playful graphics. Built for everyday flex.</p>
-                <div class="hero-actions">
-                  <button class="primary">Explore Colorways</button>
-                  <button class="ghost">Shop Kids</button>
-                </div>
               </div>
               <div class="hero-stamp">Set 2026</div>
             </div>
@@ -90,9 +86,8 @@
 
         <section class="our-story" id="hype">
           <div class="section-header story-header">
-            <p class="eyebrow">GGK Journey</p>
-            <h2>Our Story</h2>
-            <p>Milestones from concept to community.</p>
+            <h2>Our Statement</h2>
+            <p>Positivity and Creativity, Expression is Key, Own Your Style, You are a God Gifted Kid!</p>
           </div>
         </section>
 
@@ -123,7 +118,7 @@
                 <div class="product-badge">New</div>
               </div>
               <h3>Stay Winnin' Tee</h3>
-              <p class="product-meta">Oversized fit</p>
+              <p class="product-meta">All Sizes Available</p>
               <div class="product-footer">
                 <span class="price">₱ 599</span>
                 <button
@@ -154,7 +149,7 @@
                 <div class="product-badge">Hot</div>
               </div>
               <h3>Stay True Tee</h3>
-              <p class="product-meta">Soft cotton</p>
+              <p class="product-meta">All Sizes Available</p>
               <div class="product-footer">
                 <span class="price">₱ 599</span>
                 <button
@@ -185,7 +180,7 @@
                 <div class="product-badge">Drop 01</div>
               </div>
               <h3>Stay Lovely Tee</h3>
-              <p class="product-meta">Bold contrast</p>
+              <p class="product-meta">All Sizes Available</p>
               <div class="product-footer">
                 <span class="price">₱ 599</span>
                 <button
@@ -204,7 +199,7 @@
 
         <section class="collection jewelry-collection" id="brands">
           <div class="section-header">
-            <p class="eyebrow">Partner Items</p>
+            <p class="eyebrow">Flora Critters</p>
             <h2>Jewelry</h2>
             <p>Accessory picks by Loraine Morandarte</p>
           </div>
@@ -225,7 +220,7 @@
                 <span class="pill">Partner</span>
                 <div class="product-badge">Jewelry</div>
               </div>
-              <h3>Red Jewelry</h3>
+              <h3>Red Critters </h3>
               <p class="product-meta">One size</p>
               <div class="product-footer">
                 <span class="price">From ₱ 80</span>
@@ -257,7 +252,7 @@
                 <span class="pill">Partner</span>
                 <div class="product-badge">Jewelry</div>
               </div>
-              <h3>Black One</h3>
+              <h3>Black Critters</h3>
               <p class="product-meta">One size</p>
               <div class="product-footer">
                 <span class="price">From ₱ 80</span>
@@ -281,24 +276,12 @@
             <p class="eyebrow">GGK Studio</p>
             <h2>Styled for the Spotlight</h2>
             <p>FLORA colorways built for clean fits and bright energy.</p>
-            <button class="ghost">View Lookbook</button>
           </div>
           <div class="lookbook-collage">
             <div class="tile tall" style="background-image: url('assets/Loraine Pictures-20260207T111111Z-1-001/Loraine Pictures/IMG_7853.JPG');"></div>
-            <div class="tile" style="background-image: url('assets/GGK Set Reveal Pub-20260206T134533Z-1-001/GGK Set Reveal Pub/Page 6.png');"></div>
-            <div class="tile" style="background-image: url('assets/GGK Set Reveal Pub-20260206T134533Z-1-001/GGK Set Reveal Pub/Page 7.png');"></div>
+            <div class="tile" style="background-image: url('assets/Photos-20260207T110923Z-1-001/Photos/IMG_8283.JPG');"></div>
+            <div class="tile" style="background-image: url('assets/Loraine Pictures-20260207T111111Z-1-001/Loraine Pictures/IMG_7892.JPG'); background-position: center 75%;"></div>
           </div>
-        </section>
-
-        <section class="newsletter" id="kids">
-          <div>
-            <h2>Pre-order access</h2>
-            <p>Drop opens February 18, 2026. Join for early access.</p>
-          </div>
-          <form class="newsletter-form">
-            <input type="email" placeholder="Your email" required />
-            <button type="submit">Get Access</button>
-          </form>
         </section>
       </main>
 
@@ -430,6 +413,7 @@
           </label>
           <div class="fulfillment-note" data-pickup-note>
             Pickup point: De La Salle University, 2401 Taft Ave, Malate, Manila.
+            <span class="pickup-warning">Pickup is only available for DLSU students.</span>
           </div>
           <div data-address-fields>
             <label>
@@ -453,6 +437,9 @@
             Notes
             <textarea name="notes" rows="3" placeholder="Optional delivery notes"></textarea>
           </label>
+          <p class="checkout-disclaimer">
+            A confirmation email will be sent to your provided email address after your order is placed.
+          </p>
           <button class="primary" type="submit" data-place-order>Place Order</button>
           <p class="checkout-status" data-checkout-status></p>
         </form>
@@ -468,7 +455,7 @@
         <img
           class="gcash-qr"
           data-gcash-qr
-          src="https://api.qrserver.com/v1/create-qr-code/?size=280x280&data=GGK%20GCASH%20PAYMENT"
+          src="assets/Gcash.jpg"
           alt="GCash QR code"
         />
         <div class="gcash-terms">
