Unify jewelry image cycling and transition behavior

--- a/index.html
+++ b/index.html
@@ -206,62 +206,40 @@
 
           <div class="product-grid" data-products>
             <article class="product" data-category="jewelry">
-              <div class="product-image product-image-pair">
+              <div class="product-image product-image-multi">
                 <img
-                  class="primary-image"
+                  class="multi-frame frame-1"
                   src="assets/Partner Items/635259979_122294806514207083_6138504611978104708_n.jpg"
-                  alt="Red Jewelry partner item"
+                  alt="Little Critters image 1"
                 />
                 <img
-                  class="secondary-image"
+                  class="multi-frame frame-2"
                   src="assets/Partner Items/638009724_122294806424207083_2069318343562980771_n.jpg"
-                  alt="Red Jewelry alternate view"
+                  alt="Little Critters image 2"
                 />
-                <span class="pill">Partner</span>
-                <div class="product-badge">Jewelry</div>
-              </div>
-              <h3>Red Critters </h3>
-              <p class="product-meta">One size</p>
-              <div class="product-footer">
-                <span class="price">From ₱ 80</span>
-                <button
-                  class="add"
-                  data-add
-                  data-product-kind="jewelry"
-                  data-product-id="partner-red-jewelry"
-                  data-product-name="Red Jewelry"
-                  data-product-price="0"
-                >
-                  + Add
-                </button>
-              </div>
-            </article>
-
-            <article class="product" data-category="jewelry">
-              <div class="product-image product-image-pair">
                 <img
-                  class="primary-image"
+                  class="multi-frame frame-3"
                   src="assets/Partner Items/635357522_122294806466207083_260623285508020003_n.jpg"
-                  alt="Black one partner item"
+                  alt="Little Critters image 3"
                 />
                 <img
-                  class="secondary-image"
+                  class="multi-frame frame-4"
                   src="assets/Partner Items/638068851_122294806376207083_7161265339297679918_n.jpg"
-                  alt="Black one alternate view"
+                  alt="Little Critters image 4"
                 />
                 <span class="pill">Partner</span>
                 <div class="product-badge">Jewelry</div>
               </div>
-              <h3>Black Critters</h3>
+              <h3>Little Critters</h3>
               <p class="product-meta">One size</p>
               <div class="product-footer">
-                <span class="price">From ₱ 80</span>
+                <span class="price">From ₱ 60</span>
                 <button
                   class="add"
                   data-add
                   data-product-kind="jewelry"
-                  data-product-id="partner-black-one"
-                  data-product-name="Black One"
+                  data-product-id="partner-little-critters"
+                  data-product-name="Little Critters"
                   data-product-price="0"
                 >
                   + Add
